--- a/ege-transpiler/Cargo.toml
+++ b/ege-transpiler/Cargo.toml
@@ -11,4 +11,6 @@ llvm12 = ["inkwell/llvm12-0"]
 [dependencies]
 anyhow = "1.0"
 inkwell = { version = "0.5" }
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
 # ptree = "0.5"
