--- a/ege-transpiler/Cargo.toml
+++ b/ege-transpiler/Cargo.toml
@@ -11,7 +11,8 @@ llvm12 = ["inkwell/llvm12-0"]
 
 [dependencies]
 anyhow = "1.0"
+clap = { version = "4.5", features = ["derive"] }
 inkwell = { version = "0.5" }
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.138"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 # ptree = "0.5"
