--- a/ege-transpiler/Cargo.toml
+++ b/ege-transpiler/Cargo.toml
@@ -13,6 +13,8 @@ llvm12 = ["inkwell/llvm12-0"]
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
 inkwell = { version = "0.5" }
+log = "0.4.25"
+clang_log = "2.0.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 # ptree = "0.5"
