--- a/ege-compiler/Cargo.toml
+++ b/ege-compiler/Cargo.toml
@@ -17,4 +17,5 @@ log = "0.4.25"
 clang_log = "2.0.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+either = { version = "1", features = ["serde"] }
 # ptree = "0.5"
