--- a/ege-compiler/Cargo.toml
+++ b/ege-compiler/Cargo.toml
@@ -19,4 +19,5 @@ clang_log = "2.0.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 either = { version = "1", features = ["serde"] }
+paste = "1"
 # ptree = "0.5"
